# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "minidl"
version         = "0.1.0"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
description     = "Extremely lean cross platform library for loading symbols"
documentation   = "https://docs.rs/minidl"
edition         = "2018"
keywords        = ["dlopen", "LoadLibrary", "dlsym", "dll", "so"]
categories      = ["external-ffi-bindings"]
license         = "MIT OR Apache-2.0"
include         = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "Readme.md"]

[features]
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]

[badges]
maintenance = { status = "experimental" }
