# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "minidl"
version         = "0.1.6"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
description     = "Extremely lean cross platform library for loading symbols"
repository      = "https://github.com/MaulingMonkey/minidl"
documentation   = "https://docs.rs/minidl"
edition         = "2018"
keywords        = ["dlopen", "LoadLibrary", "dlsym", "dll", "so"]
categories      = ["external-ffi-bindings"]
license         = "MIT OR Apache-2.0"
readme          = "Readme.md"
include         = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "Readme.md"]
rust-version    = "1.54" # https://blog.rust-lang.org/2021/07/29/Rust-1.54.0.html#attributes-can-invoke-function-like-macros

[badges]
maintenance = { status = "experimental" }
